--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
     <img src="./images/IMG_7805.PNG" alt="Изображение" class="promo__image">
     <h1 class="promo__title">Введите ваш Email, чтобы активировать купон</h1>
     <p class="promo__notation">Мы уважаем вашу конфиденциальность и очень серьёзно относимся к её защите &mdash; никакого спама.</p>
-    <form action="" class="promo__form form">
+    <form action="#" class="promo__form form">
       <input type="email" class="form__email-input" name="email" placeholder="E-mail" required>
       <label class="form__checkbox">
         <input type="checkbox" class="form__checkbox-input" name="checkbox" id="checkbox" checked>
@@ -21,7 +21,7 @@
           рекуррентными платежами и тарифами
         </span>
       </label>
-      <button type="submit" class="form__submit">Получить купон</button>
+      <button type="submit" class="form__submit"><a class="form__link" href="МЕСТО ДЛЯ ССЫЛКИ">Получить купон</a></button>
     </form>
   </section>
   <section class="background">
