--- a/index.html
+++ b/index.html
@@ -21,7 +21,12 @@
           рекуррентными платежами и тарифами
         </span>
       </label>
-      <button type="submit" class="form__submit"><a class="form__link" href="МЕСТО ДЛЯ ССЫЛКИ">Получить купон</a></button>
+        <button type="submit" class="form__submit" onclick="myFunction()">Получить купон</button>
+      <script>
+        function myFunction() {
+          window.location.href="https://www.npmjs.com/package/cookie-parser"; //МЕСТО ДЛЯ ССЫЛКИ
+        }
+      </script>
     </form>
   </section>
   <section class="background">
