--- a/index.html
+++ b/index.html
@@ -21,9 +21,9 @@
           рекуррентными платежами и тарифами
         </span>
       </label>
-        <button type="submit" class="form__submit" onclick="myFunction()">Получить купон</button>
+        <button type="submit" class="form__submit" onclick="myFunction(evt)">Получить купон</button>
       <script>
-        function myFunction() {
+        function myFunction(evt) {
           window.location.href="https://www.npmjs.com/package/cookie-parser"; //МЕСТО ДЛЯ ССЫЛКИ
         }
       </script>
