--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
     <img src="./images/IMG_7805.PNG" alt="Изображение" class="promo__image">
     <h1 class="promo__title">Введите ваш Email, чтобы активировать купон</h1>
     <p class="promo__notation">Мы уважаем вашу конфиденциальность и очень серьёзно относимся к её защите &mdash; никакого спама.</p>
-    <form action="#" class="promo__form form">
+    <form action="#" class="promo__form form" noValidate>
       <input type="email" class="form__email-input" name="email" placeholder="E-mail" required>
       <label class="form__checkbox">
         <input type="checkbox" class="form__checkbox-input" name="checkbox" id="checkbox" checked>
@@ -21,12 +21,9 @@
           рекуррентными платежами и тарифами
         </span>
       </label>
-        <button type="submit" class="form__submit" onclick="myFunction(evt)">Получить купон</button>
-      <script>
-        function myFunction(evt) {
-          window.location.href="https://www.npmjs.com/package/cookie-parser"; //МЕСТО ДЛЯ ССЫЛКИ
-        }
-      </script>
+      <!-- <a href="https://ya.ru" class="form__link"> -->
+        <button type="submit" class="form__submit">Получить купон</button>
+      <!-- </a> -->
     </form>
   </section>
   <section class="background">
@@ -34,5 +31,6 @@
     <div class="background__circle background__circle_position_bottom-left"></div>
     <div class="background__circle background__circle_position_bottom-right"></div>
   </section>
+  <script src="./script/index.js"></script>
 </body>
 </html>
