--- a/index.html
+++ b/index.html
@@ -17,13 +17,13 @@
         <input type="checkbox" class="form__checkbox-input" name="checkbox" id="checkbox" checked>
         <span class="form__checkbox-custom"></span>
         <span class="form__checkbox-label">
-          Принимаю пользовательское соглашение, соглашаюсь с офертой, правилами сервиса,
-          рекуррентными платежами и тарифами
+          <!-- В следующей строке ссылку надо заменить на страницу с соглашением -->
+          Принимаю  <a href="https://ya.ru" class="form__link form__link_place_checkbox-label">пользовательское соглашение</a>,
+          соглашаюсь с офертой, правилами сервиса, рекуррентными платежами и тарифами
         </span>
       </label>
-      <!-- <a href="https://ya.ru" class="form__link"> -->
-        <button type="submit" class="form__submit">Получить купон</button>
-      <!-- </a> -->
+      <!-- Ссылку для кнопки надо заменить в файле index.js в папке script -->
+      <button type="submit" class="form__submit">Получить купон</button>
     </form>
   </section>
   <section class="background">
