--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
 </head>
 <body class="page">
   <section class="promo">
-    <img src="./images/IMG_7805.PNG" alt="Изображение" class="promo__image">
+    <img src="./images/MainImage.png" alt="Изображение" class="promo__image">
     <h1 class="promo__title">Введите ваш Email, чтобы активировать купон</h1>
     <p class="promo__notation">Мы уважаем вашу конфиденциальность и очень серьёзно относимся к её защите &mdash; никакого спама.</p>
     <form action="#" class="promo__form form" noValidate>
